force-app/main/default/objects/RV_Valve_Lead_Time_Details__c/fields/QueueTimeSchedule__c.field-meta.xml
<CustomField>
    <fullName>QueueTimeSchedule__c</fullName>
    <label>QueueTimeSchedule</label>
    <length>255</length>
    <type>Text</type>
</CustomField>