force-app/main/default/objects/RV_Valve_Lead_Time_Details__c/fields/Text2val__c.field-meta.xml
<CustomField>
    <fullName>Text2val__c</fullName>
    <label>Text2Val</label>
    <length>255</length>
    <type>Text</type>
</CustomField>