force-app/main/default/objects/RV_Valve_Lead_Time_Details__c/fields/Text5val__c.field-meta.xml
<CustomField>
    <fullName>Text5val__c</fullName>
    <label>Text5Val</label>
    <length>255</length>
    <type>Text</type>
</CustomField>